[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
path = "src/lib.rs"
crate-type = ["rlib"]




[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = "0.61.2"
windows = { version = "0.52.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation"
] }


